welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: not found: value couleurDeLaCase
      couleurDeLaCase= getCouleurSol()
      ^SlugTracking:6: error: not found: value couleurDeLaCase
      couleurDeLaCase match{
      ^SlugTracking:9: error: value grey is not a member of object java.awt.Color
        case Color.grey => return false
                   ^